Added log out icon, made ajax-logout functionality that works. Users can now log out and log in, notifications are displayed upon error or successful log in. Next implement validations to the user.

--- a/public/styles/homepage.css
+++ b/public/styles/homepage.css
@@ -23,3 +23,15 @@ h1 {
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
     border-radius: 5px;
 }
+
+.success {
+    color: green;
+    font-size: 18px;
+    margin-bottom: 15px;
+}
+
+.error {
+    color: red;
+    font-size: 18px;
+    margin-bottom: 15px;
+}
