--- a/public/styles/login.css
+++ b/public/styles/login.css
@@ -1,5 +1,3 @@
-/* login.css */
-
 body, html {
     margin: 0;
     padding: 0;
@@ -76,21 +74,24 @@ body, html {
     background-color: #0056b3;
 }
 
-.button-container {
-    width: 100%;
-    margin-top: 10px; /* Add margin to create space between buttons */
-}
-
 .login-container .create-user-button {
-    background-color: #28a745;
+    background-color: #007bff;
     color: #fff;
+    margin-top: 20px;
 }
 
 .login-container .create-user-button:hover {
     background-color: #218838;
 }
 
-.login-container .error {
+.success {
+    color: green;
+    font-size: 18px;
+    margin-bottom: 15px;
+}
+
+.error {
     color: red;
+    font-size: 18px;
     margin-bottom: 15px;
 }
