--- a/views/partials/navigation.ejs
+++ b/views/partials/navigation.ejs
@@ -34,9 +34,9 @@
         </div>
     </div>
     <div class="nav-bottom">
-        <a href="/city-ebicycles">City e-bicycles</a>
-        <a href="/hybrid-ebicycles">Hybrid e-bicycles</a>
-        <a href="/mountain-ebicycles">Mountain e-bicycles</a>
+        <a href="city">City e-bicycles</a>
+        <a href="hybrid">Hybrid e-bicycles</a>
+        <a href="mountain">Mountain e-bicycles</a>
     </div>
 </nav>
 
