Connected data from mongo to pages

--- a/views/article1.ejs
+++ b/views/article1.ejs
@@ -5,15 +5,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title><%= title %></title>
+    <title>Aricle 1</title>
     <link rel="stylesheet" href="/articles.css">
 </head>
 <body>
     <div class="container">
         <h1>Article 1</h1>
         <div class="article-details">
-            <h2>Details</h2>
-            <p>Details about Article 1.</p>
+            <p><%= articles[0].body %></p>
+            <h4>Author</h4>
+            <p><%= articles[0].author %></p>
         </div>
     </div>
 </body>
