--- a/views/article2.ejs
+++ b/views/article2.ejs
@@ -5,15 +5,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title><%= title %></title>
+    <title>Article 2</title>
     <link rel="stylesheet" href="/articles.css">
 </head>
 <body>
     <div class="container">
         <h1>Article 2</h1>
         <div class="article-details">
-            <h2>Details</h2>
-            <p>Details about Article 2.</p>
+            <p><%= articles[1].body %></p>
+            <h4>Author</h4>
+            <p><%= articles[1].author %></p>
         </div>
     </div>
 </body>
