--- a/views/bike3.ejs
+++ b/views/bike3.ejs
@@ -10,11 +10,18 @@
 </head>
 <body>
     <div class="container">
-        <h1>Bicycle 3</h1>
+        <h1><%= bikes[2].name %></h1>
+        <img src="/assets/images/bike_1.png" alt="City E-Bike 1">
         <div class="bike-details">
+            <h2>Description</h2>
+            <p><%= bikes[2].description %></p>
+            <h2>Price</h2>
+            <h4><%= bikes[2].price %></h4>
             <h2>Details</h2>
-            <p>Details about Bicycle 3.</p>
-            <img src="/assets/images/bike_3.png" alt="Mountain Bike 1">
+            <h4>Manufacturer:</h4>
+            <p><%= bikes[2].details.manufacturer %></p>
+            <h4>Weight:</h4>
+            <p><%= bikes[2].details.weight %></p>
         </div>
     </div>
 </body>
