Cleaned some files and removed unused imports. Corrected the homepage to display bicycles with name and price.

--- a/views/partials/most_purchased.ejs
+++ b/views/partials/most_purchased.ejs
@@ -1,8 +1,14 @@
 <div class="most-purchased">
     <h2>Most Purchased Bicycles</h2>
     <div class="bicycles">
-        <a href="/bicycles/1"><img src="/assets/city_ebikes/city_ebike_1.png" alt="Bicycle 1"></a>
-        <a href="/bicycles/2"><img src="/assets/hybrid_ebikes/hybrid_ebike_1.png" alt="Bicycle 2"></a>
-        <a href="/bicycles/3"><img src="/assets/mountain_ebikes/mountain_ebike_1.png" alt="Bicycle 3"></a>
+        <% bikes.slice(0, 3).forEach(bike => { %>
+            <div class="bicycle">
+                <a href="/bicycles/<%= bike.id %>">
+                    <img src="<%= bike.image %>" alt="<%= bike.name %>">
+                </a>
+                <p><%= bike.name %></p>
+                <p>$<%= bike.price %></p>
+            </div>
+        <% }) %>
     </div>
 </div>
