--- a/views/partials/navigation.ejs
+++ b/views/partials/navigation.ejs
@@ -40,6 +40,6 @@
     </div>
 </nav>
 
-<div id="flash-container"></div> <!-- Flash message container -->
+<div id="flash-container"></div>
 
 <script src="/scripts/logout.js"></script>
